# python-stratify

./: .cirrus.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  Dockerfile  INTRO.ipynb  LICENSE  MANIFEST.in  README.md  index.ipynb  profile_stratify.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  labeler.yml  pull_request_labeler.yml
.github/ISSUE_TEMPLATE/: bug-report-🐛.md  bug-report.md  config.yml  documentation.md  feature-request-✨.md  feature-request.md  issue.md
.github/workflows/: ci-label.yml  ci-locks.yml  ci-manifest.yml  ci-tests.yml  ci-wheels.yml  refresh-lockfiles.yml  stale.yml
requirements/: py310.yml  py311.yml  py312.yml  py313.yml  py314.yml  py38.yml  py39.yml  pypi-core.txt
requirements/locks/: README.md
src/stratify/: __init__.py  _bounded_vinterp.py  _conservative.pyx  _vinterp.pyx
src/stratify/tests/: performance.py  test_bounded_vinterp.py  test_vinterp.py
stratify/: __init__.py  _bounded_vinterp.py  _conservative.pyx  _vinterp.pyx
stratify/tests/: performance.py  test_bounded_vinterp.py  test_vinterp.py
