[build-system]
# Defined by PEP 518
requires = [
  "Cython",
  "oldest-supported-numpy",
  "setuptools>=61",
  "setuptools_scm[toml]>=7",
  "wheel",
]
# Defined by PEP 517
build-backend = "setuptools.build_meta"

[project]
authors = [
    {name = "Stratify Contributors", email = "scitools.pub@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
description = "Vectorized interpolators for Nd atmospheric and oceanographic data"
dynamic = [
    "dependencies",
    "readme",
    "version",
]
keywords = [
    "atmospheric-science",
    "cython",
    "interpolation",
    "numpy",
    "python",
    "ocean-science",
]
license = {text = "BSD-3-Clause"}
name = "stratify"
requires-python = ">=3.9"

[project.urls]
Code = "https://github.com/SciTools-incubator/python-stratify"
Issues = "https://github.com/SciTools-incubator/python-stratify/issues"

[tool.setuptools]
license-files = ["LICENSE"]
zip-safe = false

[tool.setuptools.dynamic]
dependencies = {file = "requirements/pypi-core.txt"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
include = ["stratify*"]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/stratify/_version.py"
local_scheme = "dirty-tag"

[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
skip_gitignore = "True"
verbose = "True"

[tool.check-manifest]
ignore = [
    "src/stratify/_conservative.c",
    "src/stratify/_version.py",
    "src/stratify/_vinterp.c",
]

[tool.pytest.ini_options]
addopts = "-ra -v --doctest-modules"
testpaths = ["src/stratify"]

[tool.repo-review]
# These are a list of the currently failing tests to be fixed later:
ignore = [
    "PY004", # Has docs folder
    "PP302", # Sets a minimum pytest to at least 6
    "PP304", # Sets the log level in pytest
    "PP305", # Specifies xfail_strict
    "PP306", # Specifies strict config
    "PP307", # Specifies strict markers
    "PP309", # Filter warnings specified
    "PY007", # Supports an easy task runner (nox or tox)
    "PP003", # Does not list wheel as a build-dep
    "PC111", # Uses blacken-docs
    "PC140", # Uses a type checker
    "PC160", # Uses a spell checker
    "PC170", # Uses PyGrep hooks (only needed if rST present)
    "PC180", # Uses a markdown formatter
    "PC190", # Uses Ruff
    "MY100", # Uses MyPy (pyproject config)
    "RF001", # Has Ruff config
    "RTD100" # Uses ReadTheDocs (pyproject config)
]