[metadata]
name = stratify
author = SciTools Developers
author_email = scitools-iris-dev@googlegroups.com
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Atmospheric Science
license = BSD 3-Clause
license_file = LICENSE
description = Vectorized interpolators for Nd atmospheric and oceanographic data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    interpolation
    atmospheric-science
    ocean-science
project_urls =
    Code = https://github.com/SciTools-incubator/python-stratify
    Issues = https://github.com/SciTools-incubator/python-stratify/issues
url = https://github.com/SciTools-incubator/python-stratify

[options]
packages = find:
zip_safe = False
python_requires = >=3.8
install_requires =
    numpy

[options.extras_require]
lint =
    black==21.5b0
    flake8==3.9.2
    isort==5.8.0
dev =
    pre-commit
    pytest
    pytest-cov
    codecov
release =
    twine
